add PTC flag to cabal

--- a/old-locale.cabal
+++ b/old-locale.cabal
@@ -33,3 +33,5 @@ Library
 
     build-depends: base >= 4.2 && < 5
     ghc-options: -Wall
+  if impl(ghc >= 9.0.3)
+       default-extensions: PartialTypeConstructors
